# traces-pkm

./: .editorconfig  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  adrs.toml  clippy.toml  deny.toml  findings.md  hk.pkl  mise.toml  opencode.json  progress.md  rustfmt.toml  skills-lock.json  task_plan.md
.agents/skills/rust-benchmarking/: SKILL.md
.agents/skills/rust-benchmarking/references/: criterion.md
.agents/skills/rust-integration-testing/: SKILL.md
.agents/skills/rust-integration-testing/references/: boundary-suites.md
.agents/skills/rust-testing/: SKILL.md
.agents/skills/rust-testing/references/: assertions.md  async-testing.md  async.md  benchmarking.md  boundaries.md  commands.md  concurrency-testing.md  concurrency.md  doctests.md  fixtures-and-cleanup.md  fixtures.md  integration-testing.md  mocking.md  mocks.md  panics.md  property-based-testing.md  property-based.md  raii-cleanup.md  reviewing-a-test-suite.md  running-tests.md  snapshot-testing.md  snapshots.md  table-driven-testing.md  table-driven.md  test-naming.md  unit-testing.md  writing-a-test-suite.md
.agents/skills/rust-unit-testing/: SKILL.md
.agents/skills/rust-unit-testing/references/: code-quality.md  doctests.md  linting.md  naming.md  review.md  reviewing-suites.md  unit-suites.md  writing-suites.md
.scratch/config-service/: PRD.md  spec.md
.scratch/config-service/issues/: 01-config-discovery-and-merge.md  02-template-directory-resolution.md  03-config-tracking-store.md  03-trust-store.md  04-trust-cli.md  04-trust-store.md  05-init-cli.md  05-trust-cli.md  06-init-cli.md
.scratch/prompt-service/: PRD.md  spec.md
.scratch/prompt-service/issues/: 01-provider-trait-and-fake.md  02-terminal-provider.md  03-select-and-multi-select.md
.scratch/template-service/: PRD.md  spec.md
.scratch/template-service/issues/: 01-render-pipeline-tracer.md  02-output-path-control.md  03-dry-run.md  04-interactive-functions.md  05-includes-and-utility-functions.md
docs/adr/: 0001-minijinja-with-lazy-interactive-custom-functions.md  0002-symlink-based-config-trust-and-tracking.md  0002-symlink-based-template-directory-trust.md  0003-index-based-selection-for-label-vs-value-prompts.md
docs/refs/: cli_guide.md
docs/refs/research/: 2026-07-13-rust-testing-skill-split-research.md
docs/superpowers/plans/: 2026-07-13-rust-testing-skill-split.md
docs/superpowers/specs/: 2026-07-13-rust-testing-skill-split-design.md
src/: config.rs  cwd.rs  dirs.rs  file_store.rs  hash.rs  lib.rs  main.rs  prompt.rs
src/cli/: error.rs  init.rs  mod.rs  template.rs  trust.rs
src/config/: builder.rs  candidate.rs  dirs.rs  discovery.rs  domain.rs  error.rs  file.rs  mod.rs  paths.rs  raw.rs  service.rs  store.rs  tracker.rs  trust.rs
src/dialog/: error.rs  mod.rs  preset.rs  terminal.rs
src/interact/: error.rs  mod.rs  preset.rs  terminal.rs
src/template/: engine.rs  error.rs  file_ops.rs  input.rs  loader.rs  mod.rs  path.rs  resolve.rs  service.rs  source_dir.rs  target_path.rs  writer.rs
tests/: init_cli.rs
