# -----------------------------------------------------------------------------
# Filename:    traces-pkm/Cargo.toml
# Docs:        https://doc.rust-lang.org/cargo/reference/manifest.html
# Description: Workspace manifest for the Traces Rust project, defining
#              package metadata, dependencies, and workspace-wide lints.
# -----------------------------------------------------------------------------

[package]
name = "traces-pkm"
version = "0.1.0"
edition = "2024"
description = "Personal knowledge management traces"
readme = "README.md"
repository = "https://github.com/JackMatanky/traces-pkm"
license = "MIT"
keywords = ["notes", "pkm", "templates"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
blake3 = "1.8"
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["toml"] }
inquire = "0.9"
is-terminal = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.20.0"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
# ------------------------------------------------------------- #
#                        Lint Categories                        #
# ------------------------------------------------------------- #
complexity = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }

absolute_paths = "allow"
implicit_return = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
mod_module_files = "allow"
# ------------------------------------------------------------- #
#              Allowed (Exceptions & Relaxations)               #
# ------------------------------------------------------------- #
multiple_crate_versions = "allow"
print_stderr = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
semicolon_inside_block = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
unseparated_literal_suffix = "allow"

# ------------------------------------------------------------- #
#            Warnings (Best Practices & Suggestions)            #
# ------------------------------------------------------------- #
as_conversions = "warn"
else_if_without_else = "warn"
format_push_string = "warn"
impl_trait_in_params = "warn"
missing_inline_in_public_items = "warn"

allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
as_pointer_underscore = "deny"
as_underscore = "deny"
dbg_macro = "deny"
disallowed_methods = "deny"
# ------------------------------------------------------------- #
#                 Denials (Strict Enforcements)                 #
# ------------------------------------------------------------- #
exit = "deny"
expect_used = "deny"
fn_params_excessive_bools = "deny"
indexing_slicing = "deny"
large_types_passed_by_value = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
panic = "deny"
panic_in_result_fn = "deny"
print_stdout = "deny"
shadow_unrelated = "deny"
str_to_string = "deny"
struct_excessive_bools = "deny"
todo = "deny"
too_many_lines = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unreachable = "deny"
unused_self = "deny"
unwrap_used = "deny"
